<resources>
    <string name="app_name">Sabidos</string>
    <string name="slogan_text">Teste seus conhecimentos. Divirta-se e ganhe.</string>
    <string name="initial_info_text">Antes de começarmos, informa pra gente</string>
    <string name="next_label">Continuar</string>
    <string name="caps_next_label">CONTINUAR</string>
    <string name="nickname_player_text">Apelido de Jogador</string>
    <string name="hint_nickname_field">Ex.: chico91</string>
    <string name="hint_player_name_field">Ex.: Francisco da Silva</string>
    <string name="player_name_text">Nome</string>
    <string name="play_label">Jogar</string>
    <string name="home_label">Home</string>
    <string name="premium_label">Premium</string>
    <string name="ranking_label">Ranking</string>
    <string name="profile_label">Perfil</string>
    <string name="empty_state_first_line_one">Comece a Jogar agora e acumule</string>
    <string name="empty_state_first_line_two">para subir de Nível</string>
    <string name="empty_state_second_line_one">e fazer parte da elite dos</string>
    <string name="empty_state_second_line_two">SABIDOS</string>
    <string name="motivational_label">Pronto(a) para acertar todas hoje?</string>
    <string name="hello_label">Olá, %1$s</string>
    <string name="with_ours_label">com nosso</string>
    <string name="money_symbol">$</string>
    <string name="make_money_label">a faturar</string>
    <string name="and_start_label">e começar</string>
    <string name="start_play_game_label">Você também pode virar</string>
    <string name="name_hint">Qual seu primeiro nome?</string>
    <string name="my_level_label">Meu Nível</string>
    <string name="ranking_expiration_label">Ranking semanal fecha em</string>
    <string name="close_label">Fechar</string>
    <string name="ops_label">Oops!...</string>
    <string name="internet_connection_error">Não foi possível estabelecer uma conexão, verifique seu acesso à internet</string>
    <string name="generic_error_message">Sorry :( Estamos tendo alguns problemas técnicos. Tente reiniciar a app. Talvez ajude :)</string>
    <string name="loading_label">Carregando...</string>
    <string name="error_level_info_text">Erro ao carregar os dados :(</string>
    <string name="try_again_label">Tentar novamente</string>
    <string name="generic_data_error_message_text">Desculpe. Não foi possível carregar os dados no momento.</string>
    <string name="weekly_hits_label">Meus acertos na semana</string>
    <string name="previous_label">anterior</string>
    <string name="current_label">atual</string>
    <string name="timeline_label">Timeline</string>
    <string name="my_account_label">Minha conta</string>
    <string name="hits_label">acertos</string>
    <string name="answers_label">respostas</string>
    <string name="account_management_label">Gerenciamento da conta</string>
    <string name="faq_label">FAQ - Tire suas dúvidas</string>
    <string name="my_earns_label">Meus ganhos</string>
    <string name="add_payment_label">Adicionar conta bancária</string>
    <string name="add_contact_label">Adicionar meio de contato</string>
    <string name="my_profile_label">Meu Perfil</string>
    <string name="weekly_ranking_label">Ranking Semanal</string>
    <string name="previous_week_long_label">Semana anterior</string>
    <string name="current_week_long_label">Semana atual</string>
    <string name="finish_label">Finalizar</string>
    <string name="avatar_title_label">Escolha seu avatar inicial</string>
    <string name="avatar_subtitle_label">Não se preocupe, você poderá trocar por uma foto sua depois</string>
    <string name="category_title_label">Escolha uma categoria</string>
    <string name="exit_label">Sair</string>
    <string name="close_link_label"><u>Sair</u></string>
    <string name="sign_anonymous_long_text">Caso prefira, você também pode entrar como visitante, clicando</string>
    <string name="sign_anonymous_clickable_text">Aqui</string>
    <string name="sign_phone_number_label">Entrar com Telefone</string>
    <string name="sign_email_label">Entrar com Email</string>
    <string name="login_subtitle_label">Escolha sua forma preferida de entrar</string>
    <string name="login_title_label">Login</string>
    <string name="mail_sent_title">Email enviado</string>
    <string name="mail_sent_description_start">Ótima notícia! Enviamos um email para</string>
    <string name="mail_sent_description_end">%1$s com os próximos passos do seu cadastro. Por favor, verifique sua caixa de entrada e siga as instruções. :)</string>
    <string name="email_validation_message">Por favor, digite um email válido.</string>
    <string name="phone_verification_title">Verificação de conta</string>
    <string name="verify_label">Verificar</string>
    <string name="phone_verification_sub_title">Por favor, digite o código de verificação que enviamos via SMS no número %1$s</string>
    <string name="phone_number_validation_error_message">Por favor, digite um número de telefone válido.</string>
    <string name="resent_code_long_text">Não recebeu o código?</string>
    <string name="resent_code_clickable_text">Re-enviar</string>
    <string name="authenticate_account_label">Authenticar conta</string>
    <string name="correct_answer_result_label">ACERTOOOU (:</string>
    <string name="incorrect_answer_result_label">ERROOOU ):</string>
    <string name="long_correct_answer_result_label">A resposta correta é</string>
    <string name="time_over_title">Tempo Esgotado!!</string>
    <string name="time_over_message">Tente responder a próxima pergunta um pouco mais rápido ;)</string>
    <string name="round_label">RODADA</string>
    <string name="preparing_label">PREPARANDO...</string>
    <string name="performance_label">DESEMPENHO DA RODADA</string>
    <string name="corrects_label">CORRETAS</string>
    <string name="perfect_round_feedback">Rodada Perfeita. Toma aqui seus XPs extra :)</string>
    <string name="high_round_feedback">Muito bom. Faltou pouco para a rodada perfeita :)</string>
    <string name="medium_round_feedback">Quase lá. Que tal a rodada perfeita na próxima ;)</string>
    <string name="low_round_feedback">Foi uma rodada ruim. Vamos tentar elevar o nível na próxima ;)</string>
    <string name="correct_quiz_result_values_label">ACERTOS DA RODADA</string>
    <string name="response_time_label">TEMPO MÉDIO DE RESPOSTA</string>
    <string name="xps_accumulate_label">XPs ACUMULADOS</string>
    <string name="popular_categories_label">As Populares</string>
    <string name="newest_add_label">Adicionadas Recentemente</string>
    <string name="browse_all_label">Navegue por Todas</string>
    <string name="manage_account_label">Gerenciar Conta</string>
    <string name="my_performance_label">Minha Performance</string>
    <string name="user_already_in_use_error">Este usuário já está em uso. Tente com um usuário novo.</string>
    <string name="email_already_exists_error">Já existe um usuário vinculado a este email. Tente com um email novo.</string>
    <string name="select_option_label">Selecione uma opção</string>
    <string name="new_photo_label">Nova Foto</string>
    <string name="gallery_label">Galeria</string>
    <string name="nickname_already_exists_error">Este apelido de Jogador já existe.</string>
    <string name="privacy_policy_label">Política de privacidade</string>
    <string name="idea_label">Envia uma ideia</string>
    <string name="stay_tuned_label">#FiqueLigado</string>
    <string name="congrats_label">Parabéns :)</string>
    <string name="answered_all_title">Você conseguiu completar todas as perguntas dessa categoria!</string>
    <string name="answered_all_sub_title">Muito em breve teremos perguntas novas por aqui :)</string>
</resources>