<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLight">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/screenTitle"
                style="@style/TextStyleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:text="@string/initial_info_text"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.sabidos.presentation.components.FormInputTextComponent
                android:id="@+id/firstNameInputGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="26dp"
                app:layout_constraintTop_toBottomOf="@id/screenTitle"
                custom:hintDescription="@string/hint_player_name_field"
                custom:optionalField="false"
                custom:titleText="@string/player_name_text" />

            <com.sabidos.presentation.components.FormInputTextComponent
                android:id="@+id/nicknameInputGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="26dp"
                app:layout_constraintTop_toBottomOf="@id/firstNameInputGroup"
                custom:hintDescription="@string/hint_nickname_field"
                custom:optionalField="false"
                custom:titleText="@string/nickname_player_text" />

            <com.sabidos.presentation.components.ButtonComponent
                android:id="@+id/nextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                custom:title="@string/next_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>