<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/emptyStateLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/emptyStateImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_empty_state" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/firstLineParent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emptyStateImage">

        <TextView
            android:id="@+id/oneFirstLine"
            style="@style/TextStyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_state_first_line_one"
            android:textColor="@color/textColorDarkGray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/startIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/oneFirstLine"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_star_symbol" />

        <TextView
            android:id="@+id/twoFirstLine"
            style="@style/TextStyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_state_first_line_two"
            android:textColor="@color/textColorDarkGray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/startIcon"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/secondLineParent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstLineParent">

        <TextView
            android:id="@+id/oneSecondLine"
            style="@style/TextStyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_state_second_line_one"
            android:textColor="@color/textColorDarkGray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/twoSecondLine"
            style="@style/TextStyleSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/empty_state_second_line_two"
            android:textColor="@color/textColorDarkGray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/oneSecondLine"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/thirdLineParent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondLineParent">

        <TextView
            android:id="@+id/oneThirdLine"
            style="@style/TextStyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_play_game_label"
            android:textColor="@color/textColorDarkGray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/premiumTextView"
            style="@style/TextStyleItalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/premium_label"
            android:textColor="@color/blueLinkColor"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/oneThirdLine"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/thirdThirdLine"
            style="@style/TextStyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/and_start_label"
            android:textColor="@color/textColorDarkGray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/premiumTextView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thirdLineParent">

        <TextView
            android:id="@+id/oneFourLine"
            style="@style/TextStyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_money_label"
            android:textColor="@color/textColorDarkGray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/moneySymbol"
            style="@style/TextStyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/money_symbol"
            android:textColor="@color/greenMoneyColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/oneFourLine"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/threeFourLine"
            style="@style/TextStyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/with_ours_label"
            android:textColor="@color/textColorDarkGray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/moneySymbol"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rankingTextView"
            style="@style/TextStyleItalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/weekly_ranking_label"
            android:textColor="@color/blueLinkColor"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/threeFourLine"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

