<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/resultsContentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/curved_quiz_results_border_background">

        <TextView
            android:id="@+id/roundFeedbackLabel"
            style="@style/TextStyleRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="36dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Rodada Perfeita. Toma aqui seus XPs extras" />

        <com.sabidos.presentation.components.CircularTimerSeekView
            android:id="@+id/circularTimerSeekView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="24dp"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/roundFeedbackLabel" />

        <TextView
            android:id="@+id/correctPercentageLabel"
            style="@style/TextStyleSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@id/circularTimerSeekView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/circularTimerSeekView"
            tools:text="100%" />

        <TextView
            android:id="@+id/percentageDescLabel"
            style="@style/TextStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/corrects_label"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/correctPercentageLabel" />

        <com.sabidos.presentation.quiz.views.QuizResultItemComponent
            android:id="@+id/correctQuizValueComponent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/circularTimerSeekView"
            custom:includeTopSeparator="true"
            custom:resultLabel="@string/correct_quiz_result_values_label" />

        <com.sabidos.presentation.quiz.views.QuizResultItemComponent
            android:id="@+id/responseTimeValueComponent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/correctQuizValueComponent"
            custom:resultLabel="@string/response_time_label" />

        <com.sabidos.presentation.quiz.views.QuizResultItemComponent
            android:id="@+id/xpValueComponent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/responseTimeValueComponent"
            custom:resultLabel="@string/xps_accumulate_label" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextButton"
            style="@style/ButtonStyleSemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/curved_border_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="CONTINUAR" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>